# mathlib

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cargo.toml
src/: algo.rs  elementary_function.rs  enum_expr_proposal.rs  expr.rs  function.rs  lib.rs  main.rs  num.rs  testing.rs  var.rs
src/expr/: add.rs  constant.rs  expr_fmt.rs  mul.rs
