[package]
name = "mathlib"
version = "0.1.0"
edition = "2021"
authors = ["Aapuji", "SciDev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4.3"

[lib]
name = "mathlib"       # The name of the target.
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doc = true             # Is documented by default.
crate-type = ["lib"]   # The crate types to generate.